--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<style>
-			body {background-color:hsl(212, 45%, 89%);}
+			body {
+				background-color:hsl(212, 45%, 89%);
+				min-height: 100vh;
+				display: flex;
+				justify-content: center;
+				align-items: center;}
 			img {
 				width:250px;
 				height:250px;
 				border-radius:10px;}
-			div{
+			main{
 				background-color:white;
-				border-radius:10px;}
-			.center{
-				margin:auto;
+				border-radius:10px;
 				width:250px;
-				padding:10px;
-				transform:translate(0%,40%);}
+				padding: 1rem}
 		</style>
 		<title>QR Project Page</title>
 		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 	</head>
 	<body>
-		<div class="center">
-			<img src="./images/image-qr-code.png" alt="QR Code">
-			<p style="font-size:18px;text-align:center;font-family:helvetica;font-weight:700;font-style:bold;">Improve your front-end<br>skills by building projects</p>
-			<p style="font-size:14px;text-align:center;font-family:helvetica;font-weight:400">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
-		</div>
+		<main>
+			<img src="./images/image-qr-code.png" alt="QR code to frontendmentor.io">
+			<h1 style="font-size:18px;text-align:center;font-family:helvetica;font-weight:700;font-style:bold;padding:1px;">Improve your front-end skills by building projects</h1>
+			<h1 style="font-size:14px;text-align:center;font-family:helvetica;font-weight:400">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h1>
+		</main>
 	</body>
 </html>
